--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
@@ -69,6 +69,7 @@
     var deselectedColumns = [[${deselectedColumns}]];
     var fileExportRowsThreshold = [[${fileExportRowsThreshold}]];
     var globalMetadataSearchText = [[${globalMetadataSearchText}]];
+    var searchPathOrMetadata = [[${searchPathOrMetadata}]];
 /*]]>*/
 </script>
 
@@ -680,7 +681,12 @@ window.onclick = function(event) {
 									<div class="btn-group">
 										<label
 											title="Type text and press Enter. DME searches all columns except Path in all search result pages.">
-											Search Metadata&nbsp;&nbsp;<input type="search"
+											Global Search:&nbsp;&nbsp;
+											<input type="radio" name="searchPathOrMetadata" id="searchMetadaId" value="metadata" checked="checked"  onClick="setSearchResultsMetadata()"> Search Metadata
+											&nbsp;&nbsp;
+											<input type="radio" name="searchPathOrMetadata" id="searchPathId" value="path" onClick="setSearchResultsPath()"> Search Path
+											&nbsp;&nbsp;
+											<input type="search"
 											name="globalMetadataSearchText" id="searchInput"
 											style="height: 30px" th:value="${globalMetadataSearchText}">
 											<span id="searchClear"
@@ -746,6 +752,7 @@ window.onclick = function(event) {
 						<input type="hidden" id="totalSize" name="totalSize"/>
 						<input type="hidden" id="deselectedColumns" name="deselectedColumns" value=""/>
 						<input type="hidden" id="globalMetadataSearchText" name="globalMetadataSearchText"/>
+						<input type="hidden" id="searchPathOrMetadata" name="searchPathOrMetadata"/>
 					</form> 
 					<form class="form-horizontal" id="downloadFilesform" action="#"
 						role="form" th:action="@{/downloadfiles}" 
@@ -808,6 +815,12 @@ window.onclick = function(event) {
 <script>
 /*<![CDATA[*/
 	$(document).ready(function(){
+		// Set value of radio button searchPathOrMetadata
+		if(searchPathOrMetadata == null || searchPathOrMetadata.length === 0){
+			$("input[type='radio'][name='searchPathOrMetadata'][value='" + "metadata" + "']").prop("checked", true);
+		} else {
+			$("input[type='radio'][name='searchPathOrMetadata'][value='" + searchPathOrMetadata + "']").prop("checked", true);
+		}
 		$('#sub-menu-search').addClass("active");
 		$("#totalSize").val(totalSize);
 		if(totalSize > 0)
@@ -839,7 +852,24 @@ window.onclick = function(event) {
 	    updatePage('first', currentPageSize);
 	});
 
-    function updatePage(action, newPageSize)
+
+	function setSearchResultsPath() {
+		searchPathOrMetadata = "path";
+		if(globalMetadataSearchText != null && globalMetadataSearchText.length > 0){
+			globalMetadataSearchText = "";
+			updatePage('first', currentPageSize);
+		}
+	}
+
+	function setSearchResultsMetadata() {
+		searchPathOrMetadata = "metadata";
+		if(globalMetadataSearchText != null && globalMetadataSearchText.length > 0){
+			globalMetadataSearchText = "";
+			updatePage('first', currentPageSize);
+		}
+	}
+
+	function updatePage(action, newPageSize)
     {
 
     	$('.ui-grid-pager-next').prop('disabled', true);
@@ -887,6 +917,7 @@ window.onclick = function(event) {
 	    	}
     	}
 
+		document.getElementById("simplesearchform").elements.namedItem("searchPathOrMetadata").value =  searchPathOrMetadata;
 		document.getElementById("simplesearchform").elements.namedItem("globalMetadataSearchText").value =  globalMetadataSearchText;
 		document.getElementById("simplesearchform").elements.namedItem("queryName").value = queryName;
 		document.getElementById("simplesearchform").elements.namedItem("selectedFilePaths").value = updatedList;
