HPCDATAMGM-2016: Allow Group Admins to edit users who are in the same group

--- a/src/hpc-web/src/main/resources/templates/manageuser.html
+++ b/src/hpc-web/src/main/resources/templates/manageuser.html
@@ -94,7 +94,7 @@
 					}],
 					onRegisterApi : function(gridApi) {
 						$scope.grid1Api = gridApi;
-						if (type != "SYSTEM_ADMIN" && type != "GROUP_ADMINs")
+						if (type != "SYSTEM_ADMIN" && type != "GROUP_ADMIN")
 					        $scope.gridOptions1.columnDefs[4].visible = false;
 						$("#spinner").hide();
 			            $("#dimmer").hide();
@@ -104,7 +104,7 @@
 				$scope.gridOptions1.data = results;
 
 				$scope.showMe= function(val) {
-				    return val == doc.replace(/\'/g, "") || type == "SYSTEM_ADMIN" ;
+				    return val == doc.replace(/\'/g, "") || type == "SYSTEM_ADMIN" || (type == "GROUP_ADMIN" && doc == val) ;
 				  };
 				
 			} ]);
