HPCDATAMGM-1982: When toggling between Path and Metadata searches, added Spinner with text for clarity

--- a/src/hpc-web/src/main/resources/static/css/search.css
+++ b/src/hpc-web/src/main/resources/static/css/search.css
@@ -64,3 +64,11 @@
     cursor: pointer;
     color: #ccc;
 }
+
+#spinner {
+	position: fixed;
+	top: 20%;
+	left: 40%;
+	height: 5px;
+	z-index: 9999;
+}
