--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -697,6 +697,11 @@ window.onclick = function(event) {
 										</div>
 									</div>
 								</div>
+								<div id="spinner" class="spinner" style="display: none;">
+									<img id="img-spinner" th:src="@{/img/spinner.gif}" />
+									<br />
+									Refreshing Search
+								</div>
 								<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
 									aria-labelledby="myModalLabel" aria-hidden="true">
 									<div class="modal-dialog">
@@ -806,6 +811,7 @@ window.onclick = function(event) {
 <script>
 /*<![CDATA[*/
 	$(document).ready(function(){
+		$("#spinner").hide();
 		// Set value of radio button searchPathOrMetadata
 		if(searchPathOrMetadata == null || searchPathOrMetadata.length === 0){
 			$("input[type='radio'][name='searchPathOrMetadata'][value='" + "metadata" + "']").prop("checked", true);
@@ -848,6 +854,7 @@ window.onclick = function(event) {
 		searchPathOrMetadata = "path";
 		if(globalMetadataSearchText != null && globalMetadataSearchText.length > 0){
 			globalMetadataSearchText = "";
+			$("#spinner").show();
 			updatePage('first', currentPageSize);
 		}
 	}
@@ -856,6 +863,7 @@ window.onclick = function(event) {
 		searchPathOrMetadata = "metadata";
 		if(globalMetadataSearchText != null && globalMetadataSearchText.length > 0){
 			globalMetadataSearchText = "";
+			$("#spinner").show();
 			updatePage('first', currentPageSize);
 		}
 	}
