--- a/src/hpc-web/src/main/resources/templates/creategroup.html
+++ b/src/hpc-web/src/main/resources/templates/creategroup.html
@@ -78,7 +78,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<h4>
-							<i class="fa fa-lock"></i> Create Group
+							<i class="fa fa-group"></i> Create Group
 						</h4>
 					</div>
 				</div>
