--- a/src/hpc-web/src/main/resources/templates/managegroup.html
+++ b/src/hpc-web/src/main/resources/templates/managegroup.html
@@ -108,7 +108,7 @@ var results = [[${searchresults}]];
 				<div class="row">
 					<div class="col-lg-12">
 						<h4>
-							<i class="fa fa-lock"></i> Manage Group
+							<i class="fa fa-group"></i> Manage Group
 						</h4>
 					</div>
 				</div>
