--- a/src/hpc-web/src/main/resources/templates/manageuser.html
+++ b/src/hpc-web/src/main/resources/templates/manageuser.html
@@ -132,7 +132,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<h4>
-							<i class="fa fa-lock"></i> Manage User
+							<i class="fa fa-user"></i> Manage User
 						</h4>
 					</div>
 				</div>
