--- a/src/hpc-web/src/main/resources/templates/managegroup.html
+++ b/src/hpc-web/src/main/resources/templates/managegroup.html
@@ -119,7 +119,7 @@ var results = [[${searchresults}]];
 						<div class="panel panel-default">
 							<div class="panel-heading">
 								<div class="pull-right">
-									<a id="creategrouplink" class="btn btn-link btn-sm" th:href="@{/creategroup}"><i class="fa fa-group" aria-hidden="true"></i>&nbsp;Create Group</a>
+									<a id="creategrouplink" class="btn btn-link btn-sm" th:href="@{/creategroup}"><i class="fa fa-group" aria-hidden="true"><b>+</b></i>&nbsp;Create Group</a>
 								</div>
 							</div>
 							<div th:if="${error != null}">
