--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
@@ -677,7 +677,7 @@ window.onclick = function(event) {
 										><i class="fa fa-link" title="Create Links for Selected Data Files"></i></a>
 									<label id="totalSizeLabel" class="btn btn-sm" style="display:none">Total Size of Selected Data Files: <strong id="totalSizeDisplay"></strong></label>
 								</div>
-									<div class="pull-right" id="searchInputDiv">
+									<div class="pull-right" id="searchInputDiv" style="display: none">
 										<div class="btn-group">
 												<label
 													style="margin-right: 5px"
@@ -824,6 +824,12 @@ window.onclick = function(event) {
 /*<![CDATA[*/
 	$(document).ready(function(){
 		$("#spinner").hide();
+		if(source == "'search'" || source == 'search'){
+			// If NamedQuery, hide the search box
+			$('#searchInputDiv').hide();
+		} else {
+			$('#searchInputDiv').show();
+		}
 		// Set value of radio button searchPathOrMetadata
 		if(searchPathOrMetadata == null || searchPathOrMetadata.length === 0){
 			$("input[type='radio'][name='searchPathOrMetadata'][value='" + "metadata" + "']").prop("checked", true);
@@ -840,10 +846,6 @@ window.onclick = function(event) {
 			$('#hideExportLink').hide(); 
 		} else {
 			$('#showExportLink').hide(); 
-		}
-		if(source == "'search'" || source == 'search'){
-			// If NamedQuery, hide the search box
-			$('#searchInputDiv').hide();
 		}
 	});
 
