--- a/src/hpc-web/src/main/resources/templates/index.html
+++ b/src/hpc-web/src/main/resources/templates/index.html
@@ -116,7 +116,7 @@ function enroll() {
 		</form>
 
 	</div>
-	<div th:include="footer :: footer"></div>
+	<div th:insert="~{footer :: footer}"></div>
 
 </body>
 </html>
