--- a/src/hpc-web/src/main/resources/templates/logout.html
+++ b/src/hpc-web/src/main/resources/templates/logout.html
@@ -71,7 +71,7 @@
 	  </div>
 
 	</div>
-	<div th:include="footer :: footer"></div>
+	<div th:insert="~{footer :: footer}"></div>
 
 </body>
 </html>
