--- a/src/hpc-web/src/main/resources/templates/collection.html
+++ b/src/hpc-web/src/main/resources/templates/collection.html
@@ -70,7 +70,7 @@
 
 	<!-- container section start -->
 	<section id="container" class="">
-		<div th:include="header :: header"></div>
+		<div th:insert="~{header :: header}"></div>
 		<!--main content start-->
 		<section id="main-content">
 			<section class="wrapper">
@@ -405,7 +405,7 @@
 			  </form>
 			</div>
 			</section>
-			<div th:include="footer :: footer"></div>
+			<div th:insert="~{footer :: footer}"></div>
 		</section>
 		<!--main content end-->
 	</section>
