--- a/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
@@ -64,7 +64,7 @@
 
 	<!-- container section start -->
 	<section id="container" class="">
-		<div th:include="header :: header"></div>
+		<div th:insert="~{header :: header}"></div>
 		<!--main content start-->
 		<section id="main-content">
 			<section class="wrapper">
@@ -329,7 +329,7 @@
 				<!-- modal Aspera -->
 				<div class="row"></div>
 			</section>
-			<div th:include="footer :: footer"></div>
+			<div th:insert="~{footer :: footer}"></div>
 		</section>
 		<!--main content end-->
 	<form class="form-horizontal" id="downloadForm"
