--- a/src/hpc-web/src/main/resources/templates/dataobjectuploadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectuploadtask.html
@@ -64,7 +64,7 @@
 
 	<!-- container section start -->
 	<section id="container" class="">
-		<div th:include="header :: header"></div>
+		<div th:insert="~{header :: header}"></div>
 		<!--main content start-->
 		<section id="main-content">
 			<section class="wrapper">
@@ -179,7 +179,7 @@
 					<input type="hidden" id="taskType" name="taskType" th:value="${taskType}"/>
 				</form>	
 			</section>
-			<div th:include="footer :: footer"></div>
+			<div th:insert="~{footer :: footer}"></div>
 		</section>
 		<!--main content end-->
 	</section>
