--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -54,7 +54,7 @@
 
 	<!-- container section start -->
 	<section id="container" class="">
-	  <div th:include="header :: header"></div>
+	  <div th:insert="~{header :: header}"></div>
 	  <!--main content start-->
 	  <section id="main-content">
 	    <section class="wrapper">
@@ -217,7 +217,7 @@
  
 
     </section>
-    <div th:include="footer :: footer"></div>
+    <div th:insert="~{footer :: footer}"></div>
     </section>
     </section>
 
