--- a/src/hpc-web/src/main/resources/templates/link.html
+++ b/src/hpc-web/src/main/resources/templates/link.html
@@ -48,7 +48,7 @@
 
 	<!-- container section start -->
 	<section id="container" class="">
-	  <div th:include="header :: header"></div>
+	  <div th:insert="~{header :: header}"></div>
 	  <!--main content start-->
 	  <section id="main-content">
 	    <section class="wrapper">
@@ -160,7 +160,7 @@
  
 
     </section>
-    <div th:include="footer :: footer"></div>
+    <div th:insert="~{footer :: footer}"></div>
     </section>
     </section>
 
