--- a/src/hpc-web/src/main/resources/templates/notauthorized.html
+++ b/src/hpc-web/src/main/resources/templates/notauthorized.html
@@ -70,7 +70,7 @@
 	  </div>
 
 	</div>
-	<div th:include="footer :: footer"></div>
+	<div th:insert="~{footer :: footer}"></div>
 
 </body>
 </html>
