--- a/src/hpc-web/src/main/resources/templates/profile.html
+++ b/src/hpc-web/src/main/resources/templates/profile.html
@@ -63,7 +63,7 @@
 <body>
 <!-- container section start -->
 <section id="container" class="">
-    <div th:include="header :: header"></div>
+    <div th:insert="~{header :: header}"></div>
     <!--main content start-->
     <section id="main-content">
         <section class="wrapper">
@@ -134,7 +134,7 @@
                 </div>
             </div>
         </section>
-        <div th:include="footer :: footer"></div>
+        <div th:insert="~{footer :: footer}"></div>
     </section>
     <!--main content end-->
 </section>
