--- a/src/hpc-web/src/main/resources/templates/review.html
+++ b/src/hpc-web/src/main/resources/templates/review.html
@@ -64,7 +64,7 @@ table.dataTable tbody td {
 
 	<!-- container section start -->
 	<section id="container" class="">
-		<div th:include="header :: header"></div>
+		<div th:insert="~{header :: header}"></div>
 		<!--main content start-->
 		<section id="main-content">
 			<section class="wrapper">
@@ -259,7 +259,7 @@ table.dataTable tbody td {
 				</div>
 				<!-- modal -->
 			</section>
-			<div th:include="footer :: footer"></div>
+			<div th:insert="~{footer :: footer}"></div>
 		</section>
 		<!--main content end-->
 	</section>
