--- a/src/hpc-web/src/main/resources/templates/settings.html
+++ b/src/hpc-web/src/main/resources/templates/settings.html
@@ -56,7 +56,7 @@
 <body>
 	<!-- container section start -->
 	<section id="container" class="">
-		<div th:include="header :: header"></div>
+		<div th:insert="~{header :: header}"></div>
 		<!--main content start-->
 		<section id="main-content">
 			<section class="wrapper">
@@ -89,7 +89,7 @@
 					</div>
 				</div>
 			</section>
-			<div th:include="footer :: footer"></div>
+			<div th:insert="~{footer :: footer}"></div>
 		</section>
 		<!--main content end-->
 	</section>
