--- a/src/hpc-web/src/main/resources/templates/viewdatafile.html
+++ b/src/hpc-web/src/main/resources/templates/viewdatafile.html
@@ -71,7 +71,7 @@
 
 	<!-- container section start -->
 	<section id="container" class="">
-		<div th:include="headerreadonly :: header"></div>
+		<div th:insert="headerreadonly :: header"></div>
 		<!--main content start-->
 		<section id="main-content-readonly">
 			<section class="wrapper">
@@ -249,7 +249,7 @@
 				</div>
 				<div class="row"></div>
 			</section>
-			<div th:include="footer :: footer"></div>
+			<div th:insert="~{footer :: footer}"></div>
 		</section>
 		<!--main content end-->
 	</section>
