HPCDATAMGM-1972: DME Web Upgrade to Tomcat 10.1

--- a/src/hpc-web/src/main/resources/templates/viewdatafile.html
+++ b/src/hpc-web/src/main/resources/templates/viewdatafile.html
@@ -71,7 +71,7 @@
 
 	<!-- container section start -->
 	<section id="container" class="">
-		<div th:insert="~{headerreadonly :: header"}></div>
+		<div th:insert="~{headerreadonly :: header}"></div>
 		<!--main content start-->
 		<section id="main-content-readonly">
 			<section class="wrapper">
