HPCDATAMGM-2033: Browse page, Collection "Last Updated" is showing in GMT

--- a/src/hpc-web/src/main/resources/templates/browse.html
+++ b/src/hpc-web/src/main/resources/templates/browse.html
@@ -102,7 +102,7 @@ app
 	      },
 	      {
 	        field : 'lastUpdated',
-	        displayName : 'Last Updated',
+	        displayName : 'Date Created',
             enableFiltering: false
 	      },
 	      {
