--- a/src/hpc-web/src/main/resources/templates/collectionsearchresult.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresult.html
@@ -346,7 +346,10 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridGroupingConst
 	        document.getElementById("downloadFilesform").elements.namedItem("pageNumber").value =  currentPage;
 	        document.getElementById("downloadFilesform").elements.namedItem("pageSize").value =  currentPageSize;
 	        document.getElementById("downloadFilesform").elements.namedItem("queryName").value = queryName;
-	        document.getElementById("downloadType").value = "collections";
+	        if(updatedList.length == 1)
+	            document.getElementById("downloadType").value = "collection";
+	        else
+	            document.getElementById("downloadType").value = "collections";
 	        document.getElementById("downloadFilesform").submit();
         } else if (action == 'permission') {
         	document.getElementById("bulkPermissionsform").elements.namedItem("selectedFilePaths").value = updatedList;
