--- a/src/hpc-web/src/main/resources/templates/dataobjectsdownloadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsdownloadtask.html
@@ -268,7 +268,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="panel-heading" th:if="${(hpcDataObjectsDownloadStatusDTO.getStagingInProgressItems() != null and hpcDataObjectsDownloadStatusDTO.getStagingInProgressItems().size() > 0) or (pendingItemsCount > hpcDataObjectsDownloadStatusDTO.getInProgressItems().size())}">
+							<div class="panel-heading" th:if="${(hpcDataObjectsDownloadStatusDTO.getStagingInProgressItems() != null and hpcDataObjectsDownloadStatusDTO.getStagingInProgressItems().size() > 0) 
+							    or (hpcDataObjectsDownloadStatusDTO.getResult() == null and pendingItemsCount > hpcDataObjectsDownloadStatusDTO.getInProgressItems().size())}">
 								<div class="col-md-3">
 									<h2>
 										<i class="fa fa-list-alt red"></i><strong>Staging In Progress</strong>
