HPCDATAMGM:2053: Set date type sorting for system date fields for DataObject search results

--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
@@ -384,6 +384,12 @@ window.onclick = function(event) {
 				        width : 200,
 			            type: 'number'
 				      });
+		            } else if(attribute == "createdOn" || attribute == "data_transfer_started" || attribute == "data_transfer_completed")  {
+				      $scope.gridOptions1.columnDefs.push({
+					    field: attribute,
+						width : 200,
+					    type: 'date'
+					  });
 			        } else {
 		              $scope.gridOptions1.columnDefs.push({
 		    			field: attribute,
