HPCDATAMGM-2056: Display transfer status combined with transfer result instead of just transfer result on download taskboard

--- a/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
@@ -179,12 +179,12 @@
 												th:text="${hpcDataObjectDownloadStatusDTO.getDestinationLocation().getFileId()}"></label>
 										</div>
 										<div class="col-md-12 form-group" th:if="${hpcDataObjectDownloadStatusDTO.getResult() != null}">
-											<label for="Name">Transfer Completed:</label> <label id="regComplete"
+											<label for="Name">Transfer Status:</label> <label id="regComplete"
 												for="${hpcDataObjectDownloadStatusDTO.getResult()}"
 												th:text="${hpcDataObjectDownloadStatusDTO.getResult()}"></label>
 										</div>
 										<div class="col-md-12 form-group" th:if="${hpcDataObjectDownloadStatusDTO.getResult() == null}">
-											<label for="Name">Transfer Completed:</label> <label th:if="${hpcDataObjectDownloadStatusDTO.getStagingInProgress() == null and !hpcDataObjectDownloadStatusDTO.getRestoreInProgress()}" id="regComplete">Download In Progress</label>
+											<label for="Name">Transfer Status:</label> <label th:if="${hpcDataObjectDownloadStatusDTO.getStagingInProgress() == null and !hpcDataObjectDownloadStatusDTO.getRestoreInProgress()}" id="regComplete">Download In Progress</label>
 											<label th:if="${hpcDataObjectDownloadStatusDTO.getRestoreInProgress()}" id="regComplete">Restore In Progress</label>
 											<label th:if="${hpcDataObjectDownloadStatusDTO.getStagingInProgress() != null}" id="regComplete">Staging In Progress</label>
 										</div>
