--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -124,11 +124,6 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
         displayName : 'Collection Type'
       },
       {
-        field : 'createdOn',
-        width : 200,
-        displayName : 'Created On'
-      },
-      {
           field : 'download',
           width : 50,
           displayName : 'Download',
@@ -352,10 +347,34 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 	    	  for(var j=0; j<$scope.gridOptions1.data[i].metadataEntries.selfMetadataEntries.length; j++){
 		    	  attribute = $scope.gridOptions1.data[i].metadataEntries.selfMetadataEntries[j].attribute;
 		    	  if(attribute != null && !metaSet.has(attribute) && attribute != "uuid" && attribute != "registered_by" && attribute != "collection_type") {
-		    	  	$scope.gridOptions1.columnDefs.push({
+                    if(attribute == "createdOn" || attribute == "metadata_updated")  {
+                      $scope.gridOptions1.columnDefs.push({
+                        field: attribute,
+                        width : 200,
+                        type: 'date',
+                        sortingAlgorithm: function (aDate, bDate) {
+                          if(aDate == null && bDate != null) {
+                            return -1;
+                          } else if(aDate != null && bDate == null) {
+                            return 1;
+                          } else if(bDate != null && aDate != null) {
+                            var a=new Date(aDate);
+                            var b=new Date(bDate);
+                            if (a < b) {
+                              return -1;
+                            } else if (a > b) {
+                              return 1;
+                            }
+                          }
+                          return 0;
+		                }
+	                  });
+					} else {
+                      $scope.gridOptions1.columnDefs.push({
 		    			field: attribute,
 		    			width : 200
-		    	  	});
+		              });
+					}
 		    	  	metaSet.add(attribute)
 		    	  }
 		    	  if(attribute != null) {
@@ -365,10 +384,34 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 	    	  for(var j=0; j<$scope.gridOptions1.data[i].metadataEntries.parentMetadataEntries.length; j++){
 		    	  attribute = $scope.gridOptions1.data[i].metadataEntries.parentMetadataEntries[j].attribute;
 		    	  if(attribute != null && !metaSet.has(attribute) && attribute != "uuid" && attribute != "registered_by" && attribute != "collection_type") {
-		    	  	$scope.gridOptions1.columnDefs.push({
+                    if(attribute == "createdOn" || attribute == "metadata_updated")  {
+	                  $scope.gridOptions1.columnDefs.push({
+	                    field: attribute,
+	                    width : 200,
+	                    type: 'date',
+	                    sortingAlgorithm: function (aDate, bDate) {
+	                      if( aDate == null && bDate != null) {
+	                        return -1;
+                          } else if(aDate != null && bDate == null) {
+                            return 1;
+                          } else if(bDate != null && aDate != null) {
+	                        var a=new Date(aDate);
+	                        var b=new Date(bDate);
+	                        if (a < b) {
+	                          return -1;
+	                        } else if (a > b) {
+	                          return 1;
+	                        }
+                          }
+                          return 0;
+			            }
+		              });
+				    } else {
+                      $scope.gridOptions1.columnDefs.push({
 		    			field: attribute,
 		    			width : 200
-		    	  	});
+	                  });
+                    }
 		    	  	metaSet.add(attribute)
 		    	  }
 		    	  if(attribute != null) {
