--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
@@ -145,11 +145,7 @@ window.onclick = function(event) {
 						field : 'checksum',
 						width : 250,
 						displayName : 'Checksum'
-					},{
-						field : 'createdOn',
-						width : 200,
-						displayName : 'Created On'
-					},{
+					}, {
 						field : 'download',
 						width : 100,
 						displayName : 'Download',
@@ -384,17 +380,33 @@ window.onclick = function(event) {
 				        width : 200,
 			            type: 'number'
 				      });
-		            } else if(attribute == "createdOn" || attribute == "data_transfer_started" || attribute == "data_transfer_completed")  {
+		            } else if(attribute == "createdOn" || attribute == "metadata_updated" || attribute == "data_transfer_started" || attribute == "data_transfer_completed")  {
 				      $scope.gridOptions1.columnDefs.push({
 					    field: attribute,
 						width : 200,
-					    type: 'date'
+						type: 'date',
+						sortingAlgorithm: function (aDate, bDate) {
+						  if( aDate == null && bDate != null) {
+							  return -1;
+						  } else if(aDate != null && bDate == null) {
+							  return 1;
+						  } else if(bDate != null && aDate != null) {
+						    var a=new Date(aDate);
+						    var b=new Date(bDate);
+						    if (a < b) {
+						      return -1;
+						    } else if (a > b) {
+                              return 1;
+						    }
+						  }
+                          return 0;
+                        }
 					  });
 			        } else {
-		              $scope.gridOptions1.columnDefs.push({
+                      $scope.gridOptions1.columnDefs.push({
 		    			field: attribute,
 		    			width : 200
-		              });
+                      });
 			        }
 		    	  	metaSet.add(attribute)
 		    	  }
@@ -405,10 +417,34 @@ window.onclick = function(event) {
 	    	  for(var j=0; j<$scope.gridOptions1.data[i].metadataEntries.parentMetadataEntries.length; j++){
 		    	  attribute = $scope.gridOptions1.data[i].metadataEntries.parentMetadataEntries[j].attribute;
 		    	  if(attribute != null && !metaSet.has(attribute) && attribute != "uuid" && attribute != "registered_by" && attribute != "collection_type") {
-		    	  	$scope.gridOptions1.columnDefs.push({
+		            if(attribute == "createdOn" || attribute == "metadata_updated")  {
+                      $scope.gridOptions1.columnDefs.push({
+                        field: attribute,
+                        width : 200,
+                        type: 'date',
+                        sortingAlgorithm: function (aDate, bDate) {
+                          if( aDate == null && bDate != null) {
+  							  return -1;
+                          } else if(aDate != null && bDate == null) {
+  							  return 1;
+                          } else if(bDate != null && aDate != null) {
+                            var a=new Date(aDate);
+                            var b=new Date(bDate);
+                            if (a < b) {
+  	                          return -1;
+                            } else if (a > b) {
+                              return 1;
+  	                        }
+  	                      }
+                          return 0;
+                        }
+                      });
+				    } else {
+		    		  $scope.gridOptions1.columnDefs.push({
 		    			field: attribute,
 		    			width : 200
-		    	  	});
+		    	  	  });
+				    }
 		    	  	metaSet.add(attribute)
 		    	  }
 		    	  if(attribute != null) {
