HPCDATAMGM-1905:  add multi globus fragment

--- a/src/hpc-web/src/main/resources/templates/downloadfiles.html
+++ b/src/hpc-web/src/main/resources/templates/downloadfiles.html
@@ -145,7 +145,7 @@
 						<!--  Globus Help Links -->
                               <div th:replace = "~{downloadFragment.html :: globusHelpFragment}"></div>
                               <!--  Globus block for download -->
-						<div th:replace = "~{downloadFragment.html :: globusDivFragment}"></div>
+						<div th:replace = "~{downloadFragment.html :: globusDivMultiFragment}"></div>
 
 						<div id="SyncDiv" style="display: show" th:if="${downloadType == 'datafile'}">
 							<div class="col-sm-12 column leftMargin">
